# youtube-transcriptor

./: .gitignore  README.md  config.yaml  data_reader.py  get_summary.py  get_summary_alternative.py  main.py  process_scripts.py  pyproject.toml  result_parser.py  run_llm_on_transcript.py
data/AgentsUnleashedPodcast/: AgentsUnleashedPodcastEp.1-Builder'sNightWrapup_hw5eFFOGow8.json  AgentsUnleashedPodcastEp.10-WhyAIAgentsNeedBlockchainstoBeFreeft.TrentMcConaghy_4WDH8CDqX78.json  AgentsUnleashedPodcastEp.11-WhenAIAgentsWorkTogether_qXBY2eAUf-g.json  AgentsUnleashedPodcastEp.2-User-OwnedAI_WhereWe'reAt,WhereWe'reGoingft.DavidMinarsch_FBuMGbJXaqk.json  AgentsUnleashedPodcastEp.3-WillanAIAgentTakeYourJob_GbHe637w9wc.json  AgentsUnleashedPodcastEp.4-WouldYouGiveAnAIAgentYourCreditCard_6Ic6iJIKDIo.json  AgentsUnleashedPodcastEp.5-WouldYouLetAnAIAgentUseYourComputer_oze0ajOetLc.json  AgentsUnleashedPodcastEp.6-CommunityBuiltAGIft.OlegGolev,TechnicalPMatSentient_NJ0njWaxpxY.json  AgentsUnleashedPodcastEp.7-AgenticAIIsn'tSlowingDown_dOLsbUJiHIo.json  AgentsUnleashedPodcastEp.8-HowAgenticAIIsChangingWorkAndScience_Kdkimywmhzc.json  AgentsUnleashedPodcastEp.9-WhyAIAgentsNeedWeb3ft.DavidAttermann_7pI9HGQMrX4.json  _playlist_summary_AgentsUnleashedPodcast.json
data/Anthropic_InverseScalinginTest-TimeCompute/: Anthropic_InverseScalinginTest-TimeCompute_dkmGW6PnYNE.json
llm_providers/: README.md  __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
workers/: README.md  __init__.py  llm_process.py
youtube_transcriptor/: __init__.py
(+211 files in other folders)
